# Loop-Advisor

./: .gitattributes  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  markdownlint.yml
data/: loops.json
docs/: architecture.md  usage.md
src/loop_advisor/: __init__.py  analyzer.py  cli.py  config.py  formatter.py  recommender.py
tests/integ/: test_analyze_recommend_integration.py
tests/unit/: conftest.py  test_analyzer.py  test_formatter.py  test_recommender.py
