[project]
name = "loop-advisor"
version = "0.1.0"
description = "Outil CLI pour analyser un projet et recommander des loops adaptés (loops.elorm.xyz)"
requires-python = ">=3.11"
authors = [
  { name = "Bertrand Brodeau" }
]
dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
loop-advisor = "loop_advisor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/loop_advisor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_advisor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
